--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,524 @@ ul {
 
 /*?------------------- Adjustments -e -------------------- */
 
+/*?-------------------   Buttons -s   -------------------- */
+
+.btn {
+
+    text-align: center;
+
+    position: relative;
+    box-shadow: var(--shadow-black-100);
+    color: #ecf0f1;
+    font-size: 10px;
+    font-weight: 800;
+
+    background-color: #F25764;
+    cursor: pointer;
+    padding: 0.65em 1.2em;
+    z-index: 1;
+    border: 2px solid #F2ECD8;
+    border-radius: 50px;
+    box-shadow: #c33b0d9b 2px 6px, rgba(255, 255, 255, 0.825) 0 5px 15px;
+
+    transition: all .1s;
+
+    animation: btn_bouncy 2s infinite linear;
+
+}
+
+.btn:hover {
+
+    background: #03e9f4;
+    border: solid #ffffff;
+
+    color: #050801;
+    box-shadow: 3px 6px #667e80,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
+    animation: none;
+    transition: all .1s;
+
+
+}
+
+.btn:active {
+    background-color: #0000ff;
+    box-shadow: 0 3px 5px #070606;
+    top: 3px;
+    transform: translateY(2px);
+    position: relative;
+    /* transition: all 0.3s ease-in-out; */
+}
+
+
+/*?-------------------   Buttons -e   -------------------- */
 
 
 /*!----------------######## gd1:Global Declarations Ends #######------------------- */
+
+
+/* TODO --------------- <<<< An1: Animations -s >>>> --------------------- */
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
+@keyframes jiggle {
+    0% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+
+    100% {
+        border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+}
+
+@keyframes btn_bouncy {
+    0% {
+        top: 0em;
+    }
+
+    40% {
+        top: 0em;
+    }
+
+    43% {
+        top: -0.7em;
+    }
+
+    46% {
+        top: 0em;
+    }
+
+    48% {
+        top: -0.4em;
+    }
+
+    50% {
+        top: 0em;
+    }
+
+    100% {
+        top: 0em;
+    }
+}
+
+
+@keyframes glowing {
+    0% {
+
+        box-shadow:
+            0 0 18px #03e9f4,
+            0 0 18px #03e9f4,
+            0 0 18px #03e9f4;
+
+    }
+
+    50% {
+
+        box-shadow:
+            0 0 18px #54c4ca,
+            0 0 18px #09747a,
+            0 0 18px #07383a;
+    }
+
+    100% {
+
+        box-shadow:
+            0 0 18px #03e9f4,
+            0 0 18px #03e9f4,
+            0 0 18px #03e9f4;
+    }
+}
+
+@keyframes hover_anim {
+    0% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+        transform: translatey(0px);
+    }
+
+    50% {
+        box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+        transform: translatey(-20px);
+    }
+
+    100% {
+        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+        transform: translatey(0px);
+    }
+}
+
+
+
+
+@keyframes wave_hand {
+    0% {
+        transform: rotate(0.0deg)
+    }
+
+    10% {
+        transform: rotate(14.0deg)
+    }
+
+    20% {
+        transform: rotate(-8.0deg)
+    }
+
+    30% {
+        transform: rotate(14.0deg)
+    }
+
+    40% {
+        transform: rotate(-4.0deg)
+    }
+
+    50% {
+        transform: rotate(10.0deg)
+    }
+
+    60% {
+        transform: rotate(0.0deg)
+    }
+
+    100% {
+        transform: rotate(0.0deg)
+    }
+}
+
+.active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+/* TODO --------------- <<<< An1: Animations -e >>>> --------------------- */
+
+
+/* ! -----------------++++++ re1: Responsive -s ++++++------------------- */
+
+
+/*TODO  re1160  */
+@media(max-width:1160px) {
+
+    .social_icon {
+        left: 10px;
+        position: fixed;
+    }
+
+    .port_cls {
+        padding: 80px 10px;
+    }
+
+    .port_cls .port_item {
+
+        flex: 0 0 38%;
+        max-width: 38%;
+    }
+}
+
+
+/*TODO  re85  */
+
+@media(max-width:895px) {
+
+    .section_padding {
+        padding: 80px 0px;
+    }
+
+    /*?------------ Navbar ------------------ */
+    navbar {
+        /* background-color: red; */
+        padding: 12px 17px;
+    }
+
+    .sticky {
+        padding: 8px 20px;
+    }
+
+    navbar .menu_btn {
+        display: inline-block;
+        z-index: 999;
+        background-color: var(--main-color);
+    }
+
+    .bar1,
+    .bar2,
+    .bar3 {
+
+        width: 20px;
+        height: 3.5px;
+        background-color: #ffffff;
+        margin: 2px 0;
+        transition: 0.4s;
+    }
+
+    .change .bar1 {
+        transform: translate(0, 5.5px) rotate(-45deg);
+    }
+
+    .change .bar2 {
+        opacity: 0;
+    }
+
+    .change .bar3 {
+        transform: translate(0, -5.5px) rotate(45deg);
+    }
+
+    navbar .menu {
+        position: fixed;
+        padding: 6px;
+        right: -100%;
+        top: 40px;
+        flex-direction: column;
+        background-color: var(--main-color);
+
+        transform: scale(0.1);
+        width: 90%;
+        border-radius: 10px;
+        margin: 10px 10px;
+
+        text-align: center;
+        transition: all 0.5s ease;
+        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.675);
+
+
+    }
+
+    .change i {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .sticky .menu {
+        background-color: var(--black-400);
+        top: 40px;
+    }
+
+
+    navbar .menu li {
+        display: block;
+        margin: 6px 0;
+    }
+
+    navbar ul li a.active {
+
+        font-size: 16px;
+        font-weight: 900;
+        padding: 4px 8px;
+        text-transform: capitalize;
+        cursor: pointer;
+        /* color: #2c3639; */
+    }
+
+
+    .sticky .menu li a.active {
+        /* color: var(--white); */
+        /* color: red; */
+
+    }
+
+    .sticky .menu li a {
+        color: rgba(255, 255, 255, 0.77);
+
+    }
+
+    navbar .menu.active {
+        right: 0;
+        /* transform: scaleY(1); */
+        transform: scale(1);
+        color: red;
+
+    }
+
+    /*?------------ Navbar -e  ------------------ */
+
+    .social_icon {
+        display: block;
+        left: 90%;
+        position: absolute;
+
+    }
+   
+    .home_cls .home_img,
+    .home_cls .home_txt {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .home_cls .home_img {
+        display: flex;
+        justify-content: center;
+
+    }
+
+    .home_cls .img_box {
+        margin-top: 30px;
+
+    }
+
+    /*? -------------------------------------- */
+
+    .about_cls .about_img {
+        display: none;
+    }
+
+    .about_cls .about_box {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .about_cls .section_title {
+        text-align: center;
+    }
+
+    /*?------------------------------- */
+
+
+
+
+    .skill_cls .skill_type,
+    .port_cls .port_item {
+        flex: 0 0 45%;
+        max-width: 45%;
+    }
+
+
+}
+
+
+/*?  re76  */
+
+@media (max-width : 767px) {
+
+    .social_icon {
+        left: 85%;
+    }
+
+    .about_cls .about_content,
+    .contact_cls .w_50 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+
+
+
+    .contact_cls .contact_item {
+        flex: 0 0 40%;
+        max-width: 40%;
+    }
+
+    .contact_cls .submit_btn {
+
+        margin-top: 10px;
+
+    }
+
+
+
+
+
+    /* ?---------- blob -------------- */
+
+
+    @-webkit-keyframes move {
+        from {
+            transform: translate(-100px, -100px) rotate(-190deg);
+            border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+        }
+
+        to {
+            transform: translate(350px, 700px) rotate(-10deg);
+            border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+        }
+    }
+
+    @keyframes move {
+        from {
+            transform: translate(-100px, -100px) rotate(-90deg);
+            border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+        }
+
+        to {
+            transform: translate(250px, 700px) rotate(-10deg);
+            border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+        }
+
+    }
+
+}
+
+
+
+/*? re60 */
+@media (max-width:655px) {
+
+    .home_cls.section_padding {
+        padding-top: 130px;
+    }
+
+    .home_cls .home_img {
+        flex: 0 0 60%;
+        max-width: 60%;
+    }
+
+    .home_img {
+
+        margin-top: 40px;
+        height: 200px;
+        width: 200px;
+        width: 20%;
+
+    }
+
+    .skill_cls .skill_type,
+    .port_cls .port_item,
+    .contact_cls .contact_item {
+        flex: 0 0 70%;
+        max-width: 70%;
+    }
+
+    .contact_cls .submit_btn {
+
+        margin-top: 10px;
+
+    }
+
+
+}
+
+@media (max-width: 480px) {
+
+    .skill_cls .skill_type,
+    .port_cls .port_item {
+        flex: 0 0 85%;
+        max-width: 85%;
+    }
+
+}
+
+
+
+/* ? re3  */
+@media (max-width : 390px) {
+
+    .tab_links {
+        margin-right: 15px;
+    }
+}
+
+
+
+/* ! -----------------++++++ re1: Responsive -s ++++++------------------- */
